# stellwerksim-rich-presence

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
src/: lib.rs  main.rs  presence.rs  sts.rs  tray.rs
